# AI_solo_coder_task_A_148

./: README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  build_log.txt  build_log2.txt
backend/config/: dynamics_config.json  optimization_config.json
backend/src/: alarm_ws.rs  alerts.rs  api.rs  cam_simulator.rs  clickhouse_client.rs  config.rs  dynamics.rs  force_optimizer.rs  main.rs  message_bus.rs  metrics.rs  models.rs  mqtt_receiver.rs  mqtt_subscriber.rs  optimization.rs
clickhouse/: downsampling.sql  init.sql
frontend/: cam_panel.js  index.html  package.json  trip_hammer_3d.js
simulator/: Dockerfile  sensor_simulator.py
