[package]
name = "shuidui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rumqttc = { version = "0.24" }
clickhouse = "0.12"
warp = { version = "0.3", features = ["compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
